--- a/medium/2096/2096.md
+++ b/medium/2096/2096.md
@@ -166,7 +166,7 @@ Remember, the key to solving complex problems is often to break them down into s
 # Code 
 
 
-
+### JAVA
 ```java []
 class Solution {
     private static char[] pathArray = new char[100001];
@@ -234,6 +234,7 @@ class Solution {
     }
 }
 ```
+### C++
 ```cpp []
 #include <string>
 
@@ -307,7 +308,7 @@ int Solution::srcVal;
 int Solution::destVal;
 ```
 
-
+### Python
 ```python []
 class TreeNode:
     def __init__(self, val=0, left=None, right=None):
@@ -391,6 +392,7 @@ class Solution:
         self.start_ptr -= 1
         return False
 ```
+### JavaScript
 ```js []
 class TreeNode {
     constructor(val = 0, left = null, right = null) {
@@ -470,6 +472,7 @@ class Solution {
     }
 }
 ```
+### Go
 ```go []
 type TreeNode struct {
     Val   int
