--- a/medium/1110/1110.md
+++ b/medium/1110/1110.md
@@ -1,4 +1,4 @@
-![1100.png]
+![1100.png](https://github.com/KartikDevSharma/LeetCode_Solutions/blob/main/medium/1110/1100.png)
 
 ![dfs2.png](https://assets.leetcode.com/users/images/54175522-2c69-4609-8681-7bfb9d82dbad_1721195415.695838.png)
 
