Update 2699. Modify Graph Edge Weights.md

--- a/Hard/2699/2699. Modify Graph Edge Weights.md
+++ b/Hard/2699/2699. Modify Graph Edge Weights.md
@@ -1,3 +1,162 @@
+# Intuition
+
+The problem at hand presents us with an intriguing challenge in graph theory and optimization. We're given an undirected weighted graph with n nodes, where some edges have positive weights and others have a weight of -1. Our task is to modify the -1 weight edges by assigning them positive integer values, with the goal of making the shortest path between two specific nodes (source and destination) equal to a given target distance.
+
+At first glance, this problem seems like a variation of the shortest path problem, but with a twist. We're not just finding the shortest path; we're actually manipulating the graph to achieve a specific shortest path length. This immediately brings to mind Dijkstra's algorithm, a fundamental tool in solving shortest path problems.
+
+However, the presence of -1 weights and the need to modify them adds a layer of complexity. We can't simply run Dijkstra's algorithm once and be done with it. We need to find a way to intelligently assign weights to the -1 edges to meet our target distance.
+
+The constraints of the problem are also important to consider. We can only modify edges with -1 weights, and we must assign them positive integer values between 1 and 2 * 10^9. This gives us a wide range to work with, but also means we need to be careful not to overflow our integer values.
+
+As I pondered this problem, I realized that we might need to run Dijkstra's algorithm multiple times. Why? Because each time we modify an edge weight, it could potentially change the shortest path in the graph. This led me to think about a two-phase approach:
+
+1. First, we run Dijkstra's algorithm with all -1 weights set to 1 (the minimum possible weight). This gives us the shortest possible path in the graph.
+
+2. If this shortest path is already longer than our target distance, we know it's impossible to solve the problem, and we can return an empty array.
+
+3. If the shortest path is shorter than our target, we need to increase some of the -1 weights. But how do we know which ones to increase and by how much?
+
+This is where the second phase comes in. We can run Dijkstra's algorithm again, but this time, whenever we encounter a -1 edge, we can try to increase its weight just enough to make the path to that node equal to the target distance minus the remaining distance to the destination.
+
+But there's a catch: what if increasing one edge makes another path shorter? We need to be careful to always maintain the invariant that no path becomes shorter than our target distance.
+
+This led me to think about using two distance arrays: one for the minimum possible distances (with all -1 weights set to 1), and another for the distances as we're modifying the weights. By comparing these two arrays, we can ensure that we're always increasing the total path length, never decreasing it.
+
+The use of a priority queue in Dijkstra's algorithm also seemed crucial. It would allow us to always process the node with the shortest current distance, making our weight assignments more efficient.
+
+As I thought about the implementation, I realized we would need to keep track of not just the nodes, but also the edges. This suggested using an adjacency list representation of the graph, where each entry in the list contains both the neighboring node and the index of the edge in the original edge list.
+
+The final piece of the puzzle was figuring out how to handle cases where multiple modifications could lead to the target distance. The problem statement allows for any valid solution, which gives us some flexibility. We can simply stop once we've found a valid configuration, rather than trying to enumerate all possible solutions.
+
+This intuition led me to develop an approach that involves running a modified version of Dijkstra's algorithm twice, carefully adjusting edge weights along the way. Let's dive into the details of this approach.
+
+# Approach
+
+To solve this problem, we'll implement a two-phase approach using a modified version of Dijkstra's algorithm. Here's a detailed breakdown of the steps:
+
+1. Graph Representation:
+   - Create an adjacency list representation of the graph.
+   - Each entry in the adjacency list will contain two pieces of information: the neighboring node and the index of the edge in the original edge list.
+   - This allows us to quickly look up and modify edge weights as needed.
+
+```
+function createAdjacencyList(n, edges):
+    adjacencyList = array of n empty lists
+    for each edge in edges:
+        nodeA, nodeB, weight = edge
+        add (nodeB, edgeIndex) to adjacencyList[nodeA]
+        add (nodeA, edgeIndex) to adjacencyList[nodeB]
+    return adjacencyList
+```
+
+2. Distance Arrays:
+   - Create two 2D distance arrays, both of size n x 2.
+   - The first dimension represents the node, and the second dimension represents the two phases of our algorithm.
+   - Initialize all distances to infinity, except for the source node which starts at 0.
+
+```
+function initializeDistances(n, source):
+    distances = 2D array of size n x 2, filled with infinity
+    distances[source][0] = distances[source][1] = 0
+    return distances
+```
+
+3. First Dijkstra Run:
+   - Run Dijkstra's algorithm with all -1 weights treated as 1.
+   - This gives us the shortest possible path in the graph.
+   - Store these distances in the first column of our distances array.
+
+4. Check Feasibility:
+   - If the shortest path to the destination is longer than the target, return an empty array (impossible to solve).
+   - If the shortest path equals the target, we're done - set all -1 weights to a large value and return.
+
+5. Second Dijkstra Run:
+   - Run a modified version of Dijkstra's algorithm again.
+   - This time, when we encounter a -1 edge, we try to increase its weight to make the path to that node equal to the target minus the remaining distance to the destination.
+   - Store these new distances in the second column of our distances array.
+
+Here's the pseudocode for our modified Dijkstra's algorithm:
+
+```
+function modifiedDijkstra(adjacencyList, edges, distances, source, difference, run):
+    priorityQueue = new PriorityQueue()
+    priorityQueue.add((source, 0))
+    
+    while priorityQueue is not empty:
+        currentNode, currentDistance = priorityQueue.poll()
+        
+        if currentDistance > distances[currentNode][run]:
+            continue
+        
+        for each (nextNode, edgeIndex) in adjacencyList[currentNode]:
+            weight = edges[edgeIndex][2]
+            
+            if weight == -1:
+                weight = 1
+            
+            if run == 1 and edges[edgeIndex][2] == -1:
+                newWeight = difference + distances[nextNode][0] - distances[currentNode][1]
+                if newWeight > weight:
+                    edges[edgeIndex][2] = weight = newWeight
+            
+            if distances[nextNode][run] > distances[currentNode][run] + weight:
+                distances[nextNode][run] = distances[currentNode][run] + weight
+                priorityQueue.add((nextNode, distances[nextNode][run]))
+```
+
+6. Final Check:
+   - After the second Dijkstra run, check if the new shortest path to the destination equals the target.
+   - If it doesn't, return an empty array (impossible to solve).
+
+7. Update Edges:
+   - Go through all edges one last time.
+   - Set any remaining -1 weights to 1.
+   - Return the modified edge list.
+
+```
+function updateEdges(edges):
+    for each edge in edges:
+        if edge[2] == -1:
+            edge[2] = 1
+    return edges
+```
+
+The main function that ties all these steps together would look like this:
+
+```
+function modifiedGraphEdges(n, edges, source, destination, target):
+    adjacencyList = createAdjacencyList(n, edges)
+    distances = initializeDistances(n, source)
+    
+    modifiedDijkstra(adjacencyList, edges, distances, source, 0, 0)
+    
+    difference = target - distances[destination][0]
+    if difference < 0:
+        return empty array
+    
+    modifiedDijkstra(adjacencyList, edges, distances, source, difference, 1)
+    
+    if distances[destination][1] < target:
+        return empty array
+    
+    return updateEdges(edges)
+```
+
+This approach carefully balances the need to find the shortest path with the requirement to modify edge weights to meet the target distance. By running Dijkstra's algorithm twice and making intelligent adjustments to edge weights, we can efficiently solve this complex graph problem.
+
+# Complexity
+* Time complexity: The time complexity of this solution is O((E + V) log V), where E is the number of edges and V is the number of vertices (nodes) in the graph. This is because we run Dijkstra's algorithm twice, and each run of Dijkstra's algorithm using a priority queue has a time complexity of O((E + V) log V). The additional operations (creating the adjacency list, initializing distances, and updating edges) are all linear in terms of E or V, so they don't affect the overall time complexity.
+
+* Space complexity: The space complexity is O(E + V). This comes from:
+  - The adjacency list, which stores all edges and thus takes O(E) space.
+  - The distances array, which stores two distances for each vertex, taking O(V) space.
+  - The priority queue used in Dijkstra's algorithm, which in the worst case could contain all vertices, taking O(V) space.
+  - The original edges array, which takes O(E) space.
+
+Therefore, the total space complexity is O(E + V).
+
+
+### CODE
 ```Java []
 class Solution {
     public int[][] modifiedGraphEdges(int n, int[][] edges, int source, int destination, int target) {
